styles/style.scss
$background-color: #162125;
$card-background-color: #293239;

* {
  margin: 0;
  padding: 0;
  font-family: "Orbitron";
}

body {
  background-color: $background-color;
}

#overlay {
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0,0,0,0.25);
}

#modal {
  background-color: $card-background-color;
  margin: auto;
  padding: 3rem;
  border-radius: 20px;
  z-index: 9000;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#modal form {
  display: flex;
  flex-direction: column;
  margin: 2rem 0;
}

#title-input, #url-input, #category-input {
  background-color: $background-color;
  outline: none;
  height: 2rem;
  width: 100%;
  border: none;
  border-radius: 30px;
  color: #D8DEE9;
  padding: 0rem 1rem 0rem 1rem;
  margin-top: 1.5rem;
}

#modal button {
  color: #D8DEE9;
  background-color: #518bff;
  padding: .5rem;
  border: none;
  border-radius: 20px;
}

#error-message {
  color: #ff3a3a;
}

#search-area {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2rem 0;
  width: 100%;
}

#search-bar {
  background-color: $card-background-color;
  outline: none;
  height: 2rem;
  width: 50%;
  border: none;
  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  color: #D8DEE9;
  padding-left: 1rem;
}

#search-bar:focus {
  outline: none;
}

#search-submit-button {
  background-color: $card-background-color;
  height: 2rem;
  border: none;
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
}

.fa-search {
  color: #D8DEE9;
  padding-right: 1rem;
}

#sidebar-area {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 10%;
}

#sidebar {
  margin-left: -5rem;
  transition: 0.5s;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  position: absolute;
  top: 50%;
  height: 25rem;
  margin-top: -12.5rem;
  background-color: rgba(0,0,0,0.23);
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  padding: .5rem;
  border-radius: 30px;
  overflow: scroll;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

#sidebar::-webkit-scrollbar {
  display: none;
}

#sidebar ul {
  list-style: none;
}

#sidebar li {
  display: flex;
  justify-content: center;
}

#sidebar img {
  height: 1.5rem;
  width: auto;
  margin: .5rem 0;
}

#sidebar-area:hover > #sidebar {
  margin-left: .5rem;
}

#weather-area {
  position: absolute;
  top: 0;
  right: 0;
  height: 10rem;
  width: 20rem;
}

#settings-area {
  position: fixed;
  right: 0;
  top: 50%;
  margin-top: -5rem;
  height: 10rem;
  width: 5rem;
}

#settings {
  height: 100%;
  position: absolute;
  right: -3.5rem;
  transition: .5s;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

#settings-icon, #backgrounds-icon {
  color: #D8DEE9;
  font-size: 1.5rem;
  z-index: 9999;
}

@keyframes spin {
  0% {
    transform: rotate(1turn);;
  }
}

.fa-image:hover {
  cursor: pointer;
}

.fa-cog:hover {
  cursor: pointer;
  animation: spin 1s;
}

#settings-area:hover > #settings {
  right: 1.2rem;
}

#bg-picker {
  height: 15%;
  width: 100%;
  display: flex;

  position: fixed;
  bottom: 0;
  left: 0;
  overflow-x: scroll;
  background-color: rgba(0,0,0,0.23);
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

.bg-picker-hidden {
  transition: 0.5s ease-in-out;
  margin-bottom: -15%;
}

.bg-preview {
  height: 100%;
}

.bg-preview:hover {
  cursor: pointer;
}

#clock {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

#clock-colon {
  visibility: visible;
}

#time {
  font-size: 5rem;
  font-weight: 600;
  color: #D8DEE9;
  margin: 0 auto 1rem auto;
}

#date {
  color: #D8DEE9;
  position: absolute;
  bottom: 0;
}

#top-container {
  display: flex;
  justify-content: space-evenly;
  padding: 2rem 0;
}

.top-card {
  padding: 1.2rem;
  background-color: $card-background-color;
  border-radius: 10px;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);

  i {
    color: #D8DEE9;
    font-size: 3rem;
  }
}

#card-container {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  padding: 2rem 0;
}

.card {
  padding: 1.2rem;
  margin: 1rem;
  background-color: $card-background-color;
  min-width: 10rem;
  border-radius: 10px;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

.card-title-container {
  display: flex;
  margin-bottom: .5rem;
}

.card i {
  font-size: 2rem;
  color: #D8DEE9;
  margin-right: .5rem;
}

.card-title {
  color: #D8DEE9;
}

.card-body {
  height: 8rem;
  overflow: scroll;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.card-body::-webkit-scrollbar {
  display: none;
}

.card ul {
  list-style: none;
}

.card a {
  color: #D8DEE9;
  font-size: .8rem;
  text-decoration: none;
}

